fix: css align left

--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,3 @@ body {
    text-align: left;
    width: 100%;
 }
-
-.dashboard h1 {
-   width: 70%;
-}
